[gd_scene load_steps=2 format=3 uid="uid://bslu44suymbxb"]

[ext_resource type="Script" path="res://levels/HighScoreMenu.gd" id="1_o803k"]

[node name="HighScoreLayer" type="CanvasLayer" node_paths=PackedStringArray("focusChild")]
visible = false
script = ExtResource("1_o803k")
focusChild = NodePath("LevelFinished/ButtonContainer/NextButton")

[node name="LevelFinished" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="LevelFinished"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.497
anchor_top = 0.048
anchor_right = 0.497
anchor_bottom = 0.687
offset_left = -212.544
offset_top = -0.104
offset_right = 211.456
offset_bottom = -0.176025
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LevelFinished/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="LevelFinished/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "test text"
horizontal_alignment = 1

[node name="LabelPosition1" type="Label" parent="LevelFinished/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "1. --:-- ---"
horizontal_alignment = 1

[node name="LabelPosition2" type="Label" parent="LevelFinished/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "2. --:-- ---"
horizontal_alignment = 1

[node name="LabelPosition3" type="Label" parent="LevelFinished/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "3. --:-- ---"
horizontal_alignment = 1

[node name="LabelPosition4" type="Label" parent="LevelFinished/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "4. --:-- ---"
horizontal_alignment = 1

[node name="LabelPosition5" type="Label" parent="LevelFinished/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "5. --:-- ---"
horizontal_alignment = 1

[node name="NoPositionLabel" type="Label" parent="LevelFinished/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.105882, 0.109804, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="LevelFinished"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.769
anchor_right = 0.5
anchor_bottom = 0.769
offset_left = -93.0
offset_top = -25.312
offset_right = 94.0
offset_bottom = 24.688
grow_horizontal = 2
grow_vertical = 2

[node name="RetryButton" type="Button" parent="LevelFinished/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "RETRY"

[node name="NextButton" type="Button" parent="LevelFinished/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "NEXT"

[connection signal="pressed" from="LevelFinished/ButtonContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="LevelFinished/ButtonContainer/NextButton" to="." method="_on_next_button_pressed"]
